--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,12 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 include_directories(include)
 
+link_libraries(GL glut GLEW)
 
-LINK_DIRECTORIES(lib)
-link_libraries(glut)
-link_libraries(GLEW)
-link_libraries(GL)
+#LINK_DIRECTORIES(lib)
+#link_libraries(glut)
+#link_libraries(GLEW)
+#link_libraries(GL)
 
 add_executable(rayT primitive.cpp primitive.h defs.h ray_trace.cpp tracer.cpp tracer.h InitShader.cpp)
-target_link_libraries(rayT glut GLEW)
+#target_link_libraries(rayT glut GLEW)
